Edited init.sql and fixed typo

--- a/src/main/resources/templates/user_email.html
+++ b/src/main/resources/templates/user_email.html
@@ -4,7 +4,7 @@
 <h2 th:text="'Lugupeetud ' + ${newPerson.getFirstName()} + ' ' +${newPerson.getLastName()} + '!'"></h2>
 <h4 th:text="'Teile on loodud süsteemi NIPT kasutajatunnus kasutaja ' + ${creator.getFirstName()} + ' ' + ${creator.getLastName()} + ' poolt, Te saate sisse logida süsteemi kasutajatunnusega:'"></h4>
 <h4 th:text="${newPerson.getEmail()}"></h4>
-<h4>Ja parooliga:</h4>
+<h4>ja parooliga:</h4>
 <h4 th:text="${password}"></h4>
 <h4>Lugupidamisega</h4>
 <h4>NIPT meeskond</h4>
